--- a/app/globals.css
+++ b/app/globals.css
@@ -140,9 +140,22 @@
     @apply bg-gray-900 text-foreground;
   }
 }
-@layer utilities{
+
+@layer utilities {
+  .container {
+    @apply mx-auto max-w-screen-2xl px-4 md:px-6 lg:px-8;
+  }
+  .yellow-btn {
+    @apply h-12 cursor-pointer bg-gradient-to-b from-yellow-400 to-yellow-500 hover:from-yellow-500 hover:to-yellow-400 text-gray-950 font-medium text-base rounded-lg shadow-lg disabled:opacity-50;
+  }
   .home-wrapper {
-    @apply text-gray-400 flex-col gap-4 md:gap-10 items-center sm:items-start
+    @apply text-gray-400 flex-col gap-4 md:gap-10 items-center sm:items-start;
+  }
+  .home-section {
+    @apply w-full gap-8 grid-cols-1 md:grid-cols-2 xl:grid-cols-3;
+  }
+  .header {
+    @apply z-50 w-full h-[70px] bg-gray-800;
   }
   .header-wrapper {
     @apply flex justify-between items-center px-6 py-4 text-gray-500;
